--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,10 @@
     <title>Clube de Malha Itajubá</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="manifest" href="assets/manifest.webmanifest" />
+    <link rel="manifest" href="manifest.webmanifest" />
     <meta name="theme-color" content="#1976d2" />
 
-    <!-- Open Graph -->
+    <!-- Open Graph (Facebook, WhatsApp, etc) -->
     <meta property="og:title" content="Clube de Malha Itajubá" />
     <meta
       property="og:description"
@@ -16,7 +16,7 @@
     />
     <meta
       property="og:image"
-      content="https://jjdsnt.github.io/itajuba/assets/icons/og-image.png"
+      content="https://jjdsnt.github.io/itajuba/icons/og-image.png"
     />
     <meta property="og:url" content="https://jjdsnt.github.io/itajuba/" />
     <meta property="og:type" content="website" />
@@ -31,89 +31,223 @@
     />
     <meta
       name="twitter:image"
-      content="https://jjdsnt.github.io/itajuba/assets/icons/og-image.jpg"
+      content="https://jjdsnt.github.io/itajuba/icons/og-image.jpg"
     />
 
-    <!-- Meta padrão -->
+    <!-- Meta padrão (fallbacks) -->
     <meta
       name="description"
       content="Conheça o Clube de Malha Itajubá. Tradição, esporte e comunidade desde 1960."
     />
     <meta name="author" content="Clube de Malha Itajubá" />
 
-    <!-- Favicon -->
-    <link rel="icon" href="assets/icons/favicon.svg" type="image/svg+xml" />
-    <link
-      rel="alternate icon"
-      href="assets/icons/favicon.ico"
-      type="image/x-icon"
-    />
+    <!-- Favicon moderno -->
+    <link rel="icon" href="favicon.svg" type="image/svg+xml" />
+    <link rel="alternate icon" href="favicon.ico" type="image/x-icon" />
 
-    <!-- Ícones Apple -->
-    <link rel="apple-touch-icon" href="assets/icons/apple-icon-180.png" />
+    <!-- Ícone Apple -->
+    <link rel="apple-touch-icon" href="icons/apple-icon-180.png" />
 
-    <!-- Web App -->
+    <!-- Tags modernas para Android e iOS -->
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-title" content="Clube de Malha Itajubá" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
-
+    <!-- Splash Screens iOS -->
     <link
       rel="apple-touch-startup-image"
-      href="assets/icons/apple-splash-2048-2732.jpg"
+      href="icons/apple-splash-2048-2732.jpg"
       media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)"
     />
     <link
       rel="apple-touch-startup-image"
-      href="assets/icons/apple-splash-2732-2048.jpg"
+      href="icons/apple-splash-2732-2048.jpg"
       media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)"
     />
     <link
       rel="apple-touch-startup-image"
-      href="assets/icons/apple-splash-1668-2388.jpg"
+      href="icons/apple-splash-1668-2388.jpg"
       media="(device-width: 834px) and (device-height: 1194px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)"
     />
     <link
       rel="apple-touch-startup-image"
-      href="assets/icons/apple-splash-2388-1668.jpg"
+      href="icons/apple-splash-2388-1668.jpg"
       media="(device-width: 834px) and (device-height: 1194px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)"
     />
     <link
       rel="apple-touch-startup-image"
-      href="assets/icons/apple-splash-1536-2048.jpg"
+      href="icons/apple-splash-1536-2048.jpg"
       media="(device-width: 768px) and (device-height: 1024px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)"
     />
     <link
       rel="apple-touch-startup-image"
-      href="assets/icons/apple-splash-2048-1536.jpg"
+      href="icons/apple-splash-2048-1536.jpg"
       media="(device-width: 768px) and (device-height: 1024px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)"
     />
     <link
       rel="apple-touch-startup-image"
-      href="assets/icons/apple-splash-1640-2360.jpg"
+      href="icons/apple-splash-1640-2360.jpg"
       media="(device-width: 820px) and (device-height: 1180px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)"
     />
     <link
       rel="apple-touch-startup-image"
-      href="assets/icons/apple-splash-2360-1640.jpg"
+      href="icons/apple-splash-2360-1640.jpg"
       media="(device-width: 820px) and (device-height: 1180px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)"
     />
     <link
       rel="apple-touch-startup-image"
-      href="assets/icons/apple-splash-1668-2224.jpg"
+      href="icons/apple-splash-1668-2224.jpg"
       media="(device-width: 834px) and (device-height: 1112px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)"
     />
     <link
       rel="apple-touch-startup-image"
-      href="assets/icons/apple-splash-2224-1668.jpg"
+      href="icons/apple-splash-2224-1668.jpg"
       media="(device-width: 834px) and (device-height: 1112px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)"
     />
-
-    <!-- Você pode continuar adicionando os outros formatos que precisar aqui -->
+    <link
+      rel="apple-touch-startup-image"
+      href="icons/apple-splash-1620-2160.jpg"
+      media="(device-width: 810px) and (device-height: 1080px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)"
+    />
+    <link
+      rel="apple-touch-startup-image"
+      href="icons/apple-splash-2160-1620.jpg"
+      media="(device-width: 810px) and (device-height: 1080px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)"
+    />
+    <link
+      rel="apple-touch-startup-image"
+      href="icons/apple-splash-1488-2266.jpg"
+      media="(device-width: 744px) and (device-height: 1133px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)"
+    />
+    <link
+      rel="apple-touch-startup-image"
+      href="icons/apple-splash-2266-1488.jpg"
+      media="(device-width: 744px) and (device-height: 1133px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)"
+    />
+    <link
+      rel="apple-touch-startup-image"
+      href="icons/apple-splash-1320-2868.jpg"
+      media="(device-width: 440px) and (device-height: 956px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)"
+    />
+    <link
+      rel="apple-touch-startup-image"
+      href="icons/apple-splash-2868-1320.jpg"
+      media="(device-width: 440px) and (device-height: 956px) and (-webkit-device-pixel-ratio: 3) and (orientation: landscape)"
+    />
+    <link
+      rel="apple-touch-startup-image"
+      href="icons/apple-splash-1206-2622.jpg"
+      media="(device-width: 402px) and (device-height: 874px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)"
+    />
+    <link
+      rel="apple-touch-startup-image"
+      href="icons/apple-splash-2622-1206.jpg"
+      media="(device-width: 402px) and (device-height: 874px) and (-webkit-device-pixel-ratio: 3) and (orientation: landscape)"
+    />
+    <link
+      rel="apple-touch-startup-image"
+      href="icons/apple-splash-1290-2796.jpg"
+      media="(device-width: 430px) and (device-height: 932px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)"
+    />
+    <link
+      rel="apple-touch-startup-image"
+      href="icons/apple-splash-2796-1290.jpg"
+      media="(device-width: 430px) and (device-height: 932px) and (-webkit-device-pixel-ratio: 3) and (orientation: landscape)"
+    />
+    <link
+      rel="apple-touch-startup-image"
+      href="icons/apple-splash-1179-2556.jpg"
+      media="(device-width: 393px) and (device-height: 852px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)"
+    />
+    <link
+      rel="apple-touch-startup-image"
+      href="icons/apple-splash-2556-1179.jpg"
+      media="(device-width: 393px) and (device-height: 852px) and (-webkit-device-pixel-ratio: 3) and (orientation: landscape)"
+    />
+    <link
+      rel="apple-touch-startup-image"
+      href="icons/apple-splash-1170-2532.jpg"
+      media="(device-width: 390px) and (device-height: 844px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)"
+    />
+    <link
+      rel="apple-touch-startup-image"
+      href="icons/apple-splash-2532-1170.jpg"
+      media="(device-width: 390px) and (device-height: 844px) and (-webkit-device-pixel-ratio: 3) and (orientation: landscape)"
+    />
+    <link
+      rel="apple-touch-startup-image"
+      href="icons/apple-splash-1284-2778.jpg"
+      media="(device-width: 428px) and (device-height: 926px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)"
+    />
+    <link
+      rel="apple-touch-startup-image"
+      href="icons/apple-splash-2778-1284.jpg"
+      media="(device-width: 428px) and (device-height: 926px) and (-webkit-device-pixel-ratio: 3) and (orientation: landscape)"
+    />
+    <link
+      rel="apple-touch-startup-image"
+      href="icons/apple-splash-1125-2436.jpg"
+      media="(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)"
+    />
+    <link
+      rel="apple-touch-startup-image"
+      href="icons/apple-splash-2436-1125.jpg"
+      media="(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3) and (orientation: landscape)"
+    />
+    <link
+      rel="apple-touch-startup-image"
+      href="icons/apple-splash-1242-2688.jpg"
+      media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)"
+    />
+    <link
+      rel="apple-touch-startup-image"
+      href="icons/apple-splash-2688-1242.jpg"
+      media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 3) and (orientation: landscape)"
+    />
+    <link
+      rel="apple-touch-startup-image"
+      href="icons/apple-splash-828-1792.jpg"
+      media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)"
+    />
+    <link
+      rel="apple-touch-startup-image"
+      href="icons/apple-splash-1792-828.jpg"
+      media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)"
+    />
+    <link
+      rel="apple-touch-startup-image"
+      href="icons/apple-splash-1242-2208.jpg"
+      media="(device-width: 414px) and (device-height: 736px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)"
+    />
+    <link
+      rel="apple-touch-startup-image"
+      href="icons/apple-splash-2208-1242.jpg"
+      media="(device-width: 414px) and (device-height: 736px) and (-webkit-device-pixel-ratio: 3) and (orientation: landscape)"
+    />
+    <link
+      rel="apple-touch-startup-image"
+      href="icons/apple-splash-750-1334.jpg"
+      media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)"
+    />
+    <link
+      rel="apple-touch-startup-image"
+      href="icons/apple-splash-1334-750.jpg"
+      media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)"
+    />
+    <link
+      rel="apple-touch-startup-image"
+      href="icons/apple-splash-640-1136.jpg"
+      media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)"
+    />
+    <link
+      rel="apple-touch-startup-image"
+      href="icons/apple-splash-1136-640.jpg"
+      media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)"
+    />
   </head>
   <body>
     <style>
       html {
-        overflow-y: scroll;
+        overflow-y: scroll; /* força a presença da scrollbar vertical */
       }
 
       body {
@@ -152,45 +286,11 @@
 
     <app-root></app-root>
     <div id="splash-screen">
-      <img src="assets/escudo.png" alt="Logo do CMI" />
-      <output id="splash-text" aria-live="polite">Carregando...</output>
+      <img src="escudo.png" alt="Logo do CMI" />
+      <p>Carregando...</p>
     </div>
-
-    <noscript>
-      <style>
-        #splash-screen {
-          display: none;
-        }
-        #fallback-screen {
-          position: fixed;
-          inset: 0;
-          background: #eee;
-          display: flex;
-          flex-direction: column;
-          align-items: center;
-          justify-content: center;
-          font-family: sans-serif;
-          color: #333;
-          z-index: 9999;
-        }
-        #fallback-screen img {
-          width: 120px;
-          margin-bottom: 1rem;
-        }
-        #fallback-screen p {
-          font-size: 1.1rem;
-          opacity: 0.8;
-          max-width: 300px;
-          text-align: center;
-        }
-      </style>
-      <div id="fallback-screen">
-        <img src="assets/escudo.png" alt="Logo do CMI" />
-        <p>
-          Seu navegador parece não suportar este aplicativo. Por favor, ative o
-          JavaScript ou atualize seu navegador.
-        </p>
-      </div>
-    </noscript>
+    <noscript
+      >Please enable JavaScript to continue using this application.</noscript
+    >
   </body>
 </html>
